# Enhancement-of-the-SambaMixer-algorithm-for-predicting-Li-ion-battery-lifetime-

./: .gitignore  README.md  pyproject.toml
configs/: ablation_train_backbone.yaml  ablation_train_encodings.yaml  ablation_train_resample.yaml  ablation_train_token.yaml  debug_train_config.yaml  eval_config.yaml  experiment_eval_different_start_cycles.yaml  experiment_train_data_splits.yaml  experiment_train_model_scaling.yaml  train_config.yaml
configs/dataset/: debug.yaml  nasa_L.yaml  nasa_L_pwm.yaml  nasa_L_swapped.yaml  nasa_M.yaml  nasa_S.yaml  oxford.yaml  pwm.yaml
configs/dataset/cycle_type/: discharge.yaml  discharge_filtered.yaml
configs/model/: samba_L.yaml  samba_M.yaml  samba_M_hierachical.yaml  samba_S.yaml  samba_XL.yaml
configs/model/backbone/: bidirectional_mamba.yaml  samba_mixer.yaml  vanilla_mamba.yaml
configs/model/input_projection/: linear_projection.yaml  local_time_embedding.yaml  local_time_global_diff_embedding.yaml
configs/trainer/: base.yaml  debug.yaml
configs/trainer/optimizer/: adam.yaml  adam_w.yaml
configs/trainer/scheduler/: cosine.yaml  cosine_with_restart.yaml  exponential.yaml  step.yaml
environment/: Dockerfile  requirements.txt
samba_mixer/dataset/: nasa_battery_dataset.py  preprocessing.py  samba_data_module.py
samba_mixer/layer/: bi_samba.py  embedding.py  samba_block.py  samba_mixer.py  weighted_average.py
samba_mixer/math/: battery_formulations.py  initializer.py  metrics.py
samba_mixer/model/: samba.py
samba_mixer/model/backbones/: backbone_factory.py  bidirectional_mamba.py  hierachical_samba_mixer.py  samba_backbone.py  samba_mixer.py  vanilla_mamba.py
samba_mixer/model/heads/: head_factory.py  linear_head.py  samba_head.py
samba_mixer/model/input_projections/: input_projection_factory.py  linear_projection.py  linear_projection_time_embedding.py  linear_projection_time_embedding_cycle_diff_embedding.py  samba_input_projection.py
samba_mixer/ops/: selective_scan_interface.py
samba_mixer/utils/: omega_conf_resolver.py  visualization.py
scripts/: eval.py  start_ablations.sh  start_experiments.sh  train.py
scripts/utils/: convert_nasa_dataset_discharge.py
third_party_packages/causal-conv1d-1.2.2/: setup.py
third_party_packages/causal-conv1d-1.2.2/csrc/: causal_conv1d.cpp
third_party_packages/mamba/: setup.py  test_mamba_module.py
third_party_packages/mamba/mamba_ssm/ops/: __init__.py  selective_scan_interface.py
third_party_packages/mamba/mamba_ssm/ops/triton/: layernorm.py
